<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/hvhButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:enabled="true"
            android:padding="5dp"
            android:text="@string/human_vs_human" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/hvrcButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:enabled="false"
            android:padding="5dp"
            android:text="@string/human_vs_random_choice_cpu"
            android:textColor="#61000000" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/hvmcButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:padding="5dp"
            android:text="@string/human_vs_minimax_computer"
            android:textColor="#61000000" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/rcvrcButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:padding="5dp"
            android:text="@string/random_choice_cpu_vs_random_choice_cpu"
            android:textColor="#61000000" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/mcvmcButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:padding="5dp"
            android:text="@string/minimaxcomputer_vs_minimax_computer"
            android:textColor="#61000000" />
    </TableRow>
</TableLayout>